# openscenario-builder

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SCHEMA_AWARE_SUMMARY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: CLI_QUICK_REFERENCE.md  CLI_USAGE.md  PLUGIN_GUIDE.md  SCHEMA_AWARE_CREATION.md  VALIDATOR_ARCHITECTURE.md
examples/: README.md  create_simple_scenario.py  create_validated_scenario.py  demo_schema_aware.py  validate_scenario.py
src/openscenario_builder/: __init__.py  __main__.py
src/openscenario_builder/cli/: __init__.py  validator.py
src/openscenario_builder/core/: __init__.py
src/openscenario_builder/core/model/: __init__.py  element.py  element_builder.py  element_factory.py
src/openscenario_builder/core/plugins/: __init__.py  export_plugin.py  import_plugin.py  plugin_manager.py  plugin_metadata.py  xosc_min_occur_validator.py  xosc_scenario_validator_plugin.py
src/openscenario_builder/core/schema/: __init__.py  parser.py
src/openscenario_builder/core/utils/: __init__.py
src/openscenario_builder/core/utils/validation_helpers/: __init__.py  element_collectors.py  recursive_validator.py  type_validators.py
src/openscenario_builder/core/utils/validators/: __init__.py  datatype_validator.py  min_occur_validator.py  reference_validator.py  schema_structure_validator.py  sequence_order_validator.py  structure_validator.py  uniqueness_validator.py
src/openscenario_builder/core/validation/: __init__.py
src/openscenario_builder/interfaces/: __init__.py  model.py  plugins.py  schema.py
src/openscenario_builder/ui/: __init__.py
src/openscenario_builder/ui/qt/: __init__.py  form_widget.py  main_window.py  preview_widget.py  tree_widget.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/core/: __init__.py
tests/unit/core/model/: __init__.py  test_builder.py  test_element.py  test_factory.py
tests/unit/core/plugins/: __init__.py  test_validator_utils.py  test_xosc_datatype_validator.py  test_xosc_reference_validator.py  test_xosc_scenario_validator_plugin.py  test_xosc_schema_structure_validator.py  test_xosc_sequence_order_validator.py  test_xosc_structure_validator.py  test_xosc_uniqueness_validator.py
tests/unit/core/schema/: __init__.py  test_parser.py
tests/unit/interfaces/: __init__.py  test_interfaces.py
